# VaporFrame-Engine

./: .gitignore  CMakeLists.txt  README.md  direct_output.txt  output.txt
.github/workflows/: ci.yml
assets/ui/pages/: main-menu.html
assets/ui/scripts/: ui-bridge.js
assets/ui/themes/default/: style.css
shaders/: shader.frag  ui.frag  ui.frag.spv  ui.vert  ui.vert.spv
src/: CMakeLists.txt  VulkanRenderer.cpp  VulkanRenderer.h  frag.spv  main.cpp  minimal.frag  minimal.vert  vert.spv
src/Core/: Camera.cpp  Camera.h  ImGuiUI.cpp  ImGuiUI.h  InputManager.cpp  InputManager.h  Logger.cpp  Logger.h  MemoryManager.cpp  MemoryManager.h  MemoryTest.cpp  MeshLoader.cpp  MeshLoader.h  SceneGraph.cpp  SceneGraph.h  UISystem.cpp  UISystem.h  WebViewUI.cpp  WebViewUI.h
src/shaders/: frag.glsl  vert.glsl
tests/: CameraTest.cpp  InputTest.cpp  SceneGraphTest.cpp
